syntax = "proto3";

option csharp_namespace = "Grpc.Server.Protos";
enum EmployeeStatus{
 NOLMAL=0;
 ONVACATION=1;
 RESIGNED=2;
 RETIRED=3;
}